# datapilot

./: .gitignore  LICENSE  README.md
backend/: .coverage  Makefile  OPTIMIZATION_COMPARISON.md  OPTIMIZATION_GUIDE.md  README.md  env.example  langgraph.json  package.json  pyproject.toml  requirements.txt  rollback_optimizations.sh  start.sh  test_optimizations.sh
backend/app/: __init__.py  main.py
backend/app/ai_agent/: __init__.py  datapilot_workflow.py
backend/app/ai_agent/workflow/: __init__.py  graph.py  state.py
backend/app/api/: __init__.py
backend/app/api/v1/: __init__.py  api.py
backend/app/core/: __init__.py  config.py  logging.py  mongodb.py
backend/app/models/: __init__.py  auth_provider.py  connection.py  conversation.py  language.py  master_key.py  query_response.py  saved_apex.py  saved_query.py  sobject_cache.py  sobject_favorite.py  translation.py
backend/app/schemas/: __init__.py  errors.py
backend/app/services/: __init__.py  auth_provider_service.py  connection_service.py  conversation_service.py  database_service.py  error_service.py  favorites_service.py  i18n_service.py  master_key_service.py  salesforce_service.py  salesforce_tree_transformer.py  saved_apex_service.py  saved_query_service.py  sobject_cache_service.py
backend/app/translations/en/: aiAssistant.properties  apex.properties  app.properties  auth_providers.properties  common.properties  connections.properties  conversations.properties  database.properties  debug.properties  details.properties  error.properties  i18n.properties  logs.properties  masterKey.properties  query.properties  results.properties  resultsViewPage.properties  salesforce.properties  saved_apex.properties  saved_queries.properties  schema.properties  session.properties  settings.properties  sobject_cache.properties  status.properties  statusBar.properties  toolbar.properties
backend/app/translations/fr/: aiAssistant.properties  apex.properties  app.properties  auth_providers.properties  common.properties  connections.properties  conversations.properties  database.properties  debug.properties  details.properties  error.properties  i18n.properties  logs.properties  masterKey.properties  query.properties  results.properties  schema.properties  (+10 more)
backend/app/utils/: __init__.py  ai_utils.py  i18n_utils.py  json_utils.py  security_utils.py  translation_loader.py  validation_utils.py
backend/postman/: datapilot_API_Collection.json
(+162 files in other folders)
